syntax = "proto3";

package com.coralogixapis.dashboards.v1.services;

import "com/coralogixapis/dashboards/v1/audit_log.proto";
import "com/coralogixapis/dashboards/v1/common/folder.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service DashboardCatalogService {
  rpc GetDashboardCatalog(GetDashboardCatalogRequest) returns (GetDashboardCatalogResponse) {
    option (audit_log_description).description = "get dashboard catalog";
  }
}

message GetDashboardCatalogRequest {}

message GetDashboardCatalogResponse {
  repeated DashboardCatalogItem items = 1;
}

message DashboardCatalogItem {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.BoolValue is_default = 4;
  google.protobuf.BoolValue is_pinned = 5;
  google.protobuf.Timestamp create_time = 6;
  google.protobuf.Timestamp update_time = 7;
  common.DashboardFolder folder = 8;
}
