syntax = "proto3";

package com.coralogixapis.dashboards.v1.services;

import "com/coralogix/common/v1/audit_log.proto";
import "com/coralogixapis/dashboards/v1/common/dataprime_result.proto";
import "com/coralogixapis/dashboards/v1/common/query.proto";
import "com/coralogixapis/dashboards/v1/common/time_frame.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

service DataprimeDataSourceService {
  rpc SearchDataprime(SearchDataprimeRequest) returns (SearchDataprimeResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "Search Dataprime";
    option (google.api.http) = {
      get: "/dashboards/dataprime"
    };
  }
  rpc SearchDataprimeArchive(SearchDataprimeArchiveRequest) returns (SearchDataprimeArchiveResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "Search Dataprime archive";
    option (google.api.http) = {
      get: "/dashboards/dataprime/archive"
    };
  }
}

message SearchDataprimeRequest {
  common.SerializedDataprimeQuery dataprime_query = 1;
  common.DataprimeQuery dataprime_query_raw = 2;
  common.TimeFrame time_frame = 3;
  google.protobuf.Int32Value limit = 4;
}

message SearchDataprimeResponse {
  repeated common.DataprimeResult results = 1;
  map<string, string> meta = 2;
}

message SearchDataprimeArchiveRequest {
  common.SerializedDataprimeQuery dataprime_query = 1;
  common.DataprimeQuery dataprime_query_raw = 2;
  common.TimeFrame time_frame = 3;
  google.protobuf.Int32Value limit = 4;
  google.protobuf.StringValue widget_id = 5;
}

message SearchDataprimeArchiveResponse {
  repeated common.DataprimeResult results = 1;
  map<string, string> meta = 2;
}
