syntax = "proto3";

package com.coralogixapis.dashboards.v1.services;

import "com/coralogixapis/dashboards/v1/audit_log.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/wrappers.proto";

service TeamSettingsService {
  rpc GetTeamSettings(GetTeamSettingsRequest) returns (GetTeamSettingsResponse) {
    option (audit_log_description).description = "get team settings";
  }
}

message GetTeamSettingsRequest {
  google.protobuf.StringValue request_id = 1;
}

message GetTeamSettingsResponse {
  google.protobuf.Int32Value max_group_by_logs = 1;
  google.protobuf.Int32Value max_group_by_metrics = 2;
}
